--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "client",
+  "name": "blogforge-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "preinstall": "npm config set registry https://registry.npmjs.org/",
     "dev": "vite",
     "prebuild":"",
     "build": "vite build",
